# RustGame

./: CODEOWNERS
rust_game/: .gitignore  Cargo.toml  notes.md  run.bat  run.sh  rustfmt.toml  test-and-coverage.sh
rust_game/commons/: Cargo.toml
rust_game/commons/src/: lib.rs
rust_game/commons/src/factory/: factory.rs  factorytrait.rs  mod.rs  realfactory.rs
rust_game/commons/src/geometry/: mod.rs
rust_game/commons/src/ip/: mod.rs  realtcplistener.rs  realtcpstream.rs  tcplistenertrait.rs  tcpstreamtrait.rs
rust_game/commons/src/logging/: loggingconfigbuilder.rs  mod.rs  setup_test_logging.rs
rust_game/commons/src/net/: constants.rs  mod.rs  realtcplistener.rs  realtcpstream.rs  realudpsocket.rs  resetablereader.rs  tcpconnectionhandlertrait.rs  tcplistenereventhandler.rs  tcplistenertrait.rs  tcpreadereventhandler.rs  tcpreadertrait.rs  tcpreadhandlertrait.rs  tcpreceivertrait.rs  tcpsendertrait.rs  tcpstreamtrait.rs  tcpwritertrait.rs  udpreadereventhandler.rs  udpreadhandlertrait.rs  udpsockettrait.rs
rust_game/commons/src/real_time/: event_handler_builder.rs  event_handler_stopper.rs  event_or_stop_thread.rs  event_sender.rs  eventhandlertrait.rs  factory.rs  factorytrait.rs  handle_event.rs  mod.rs  realfactory.rs  receive_meta_data.rs  receiver.rs  send_meta_data.rs  sender.rs  single_thread_executor.rs  time_source.rs
rust_game/commons/src/single_threaded_simulator/: mod.rs  singlethreadedfactory.rs  timequeue.rs
rust_game/commons/src/stats/: minmax.rs  mod.rs  rollingaverage.rs  rollingstats.rs  (+4 more)
rust_game/commons/tests/: mod.rs
rust_game/engine-core/: Cargo.toml
rust_game/engine-core/src/: aggregate_input.rs  lib.rs  state_channel.rs
rust_game/simple-game/: Cargo.toml
rust_game/simple-game/src/: bullet.rs  character.rs  main.rs  simplegameimpl.rs  simpleinput.rs  simpleinputevent.rs  simpleinputeventhandler.rs  simpleserverinput.rs  simplestate.rs  simplewindow.rs
rust_game/src/: client.rs  gamemanager.rs  gametime.rs  interface.rs  logging.rs  main.rs  messaging.rs  server.rs  simplegame.rs  support.rs  threading.rs  util.rs
rust_game/src/client/: client.rs  clientcore.rs  clientgametimeobserver.rs  clientmanagerobserver.rs  core.rs  mod.rs  tcpinput.rs  tcpoutput.rs  udpinput.rs  udpoutput.rs
rust_game/src/gamemanager/: coresendertrait.rs  manager.rs  managerobservertrait.rs  mod.rs  renderreceiver.rs  step.rs  stepmessage.rs
rust_game/src/gametime/: gametimer.rs  gametimerobserver.rs  mod.rs  timeduration.rs  timemessage.rs  timereceived.rs  timevalue.rs
rust_game/src/interface/: game.rs  gamefactorytrait.rs  input.rs  inputevent.rs  inputeventhandler.rs  interpolate.rs  interpolationarg.rs  interpolationresult.rs  mod.rs  nextstatearg.rs  realgamefactory.rs  serverinput.rs  serverupdatearg.rs  state.rs  stateupdate.rs  types.rs  updatearg.rs
rust_game/src/messaging/: fragmentassembler.rs  fragmenter.rs  initialinformation.rs  inputmessage.rs  messagefragment.rs  mod.rs  serverinputmessage.rs  statemessage.rs  toclientmessage.rs  toclientmessagetcp.rs  toclientmessageudp.rs  toservermessage.rs  toservermessagetcp.rs  toservermessageudp.rs
rust_game/src/server/: clientaddress.rs  core.rs  mod.rs  remoteudppeer.rs  serverconfig.rs  servercore.rs  servergametimerobserver.rs  servermanagerobserver.rs  tcpconnectionhandler.rs  tcpinput.rs  tcplistenerthread.rs  tcpoutput.rs  udphandler.rs  udpinput.rs  udpoutput.rs
rust_game/src/simplegame/: bullet.rs  character.rs  line2.rs  linesegment2.rs  mod.rs  simplegameimpl.rs  simpleinput.rs  simpleinputevent.rs  simpleinputeventhandler.rs  simpleserverinput.rs  simplestate.rs  simplewindow.rs  vector2.rs
rust_game/src/threading/: asyncjoin.rs  channel.rs  channeldriventhread.rs  channelthread.rs  listenerthread.rs  messagechannel.rs  messagehandlingthread.rs  mod.rs  oldchannel.rs  oldreceiver.rs  oldsender.rs  receiver.rs  sender.rs  thread.rs  threadbuilder.rs
rust_game/src/util/: rollingaverage.rs
rust_game/test-utils/: Cargo.toml
rust_game/test-utils/src/: lib.rs
rust_game/test-utils/tests/: mod.rs
(+356 files in other folders)
