[package]
name = "rust_game"
version = "0.1.0"
authors = ["benal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
commons = { path = "commons" }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1.1"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.2.0"}
timer = "0.2.0"
chrono = "0.4.19"
num = "0.4.0"

piston = "0.53.2"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"

[workspace]
members = [
    "commons",
    "test-utils"
]