[package]
name = "rust_game"
edition.workspace = true
version.workspace = true
authors.workspace = true

[workspace]
members = [
    "commons",
    "engine-core",
    "simple-game",
    "test-utils"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Benjamin A. Alexander"]

[workspace.dependencies]

#Dependencies withing the workspace
commons = { path = "./commons" }
engine-core = { path = "./engine-core" }
simple-game = { path = "./simple-game" }
test-utils = { path = "./test-utils" }

#Dependencies on crates outside the workspace
chrono = "0.4.19"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.2.0"}
num = "0.4.0"
piston = "0.53.2"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"
rmp-serde = "1.1.1"
serde = { version = "1", features = ["derive"] }
timer = "0.2.0"