[package]
name = "commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1",  features = ["derive"] }
num = "0.4.0"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.2.0"}