[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.2.0"}
rmp-serde = "1.1.1"
serde = { version = "1",  features = ["derive"] }
